# ALDO-Alpha-object-Logical-Discovery-Optimization

./: .gitignore  README.md  cli_main.py  pyproject.toml  tool_main.py
Report/: Report.md
src/: data_manager.py  generator.py  native_dialogs.py
src/cli/: interactive.py  tool.py
src/formatters/: __init__.py  base.py  md.py  txt.py
