[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern_generator"
version = "0.1.0"
description = "Optimization model generator for pattern discovery (Alpha-Object approach)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "typer[all]>=0.9.0"
]

[project.scripts]
pattern-interactive = "cli_main:main"
pattern-tool = "tool_main:app"

[tool.setuptools]
packages = ["src", "src.formatters", "src.cli"]
py-modules = ["cli_main", "tool_main"]
